--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p><b>
     <p><a href="recipes/casserole.html">Chicken and Dumplings Casserole</a></p>
     <p><a href="recipes/garlic.html">Garlic-Parmesan Shrimp</a></p>
+    <p><a href="recipes/cheese.html">Simple Macaroni and Cheese</a></p>
     </b></p>
 
 </body>
