finished styling pages, changed backgroud color and edges on images.

--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 </head>
 <body>
     <div class="header"><h1>ODIN RECIPES</h1></div>
-    <div class="obrazok">
+    <div id="obrazok2">
     <img src="https://cdn.pixabay.com/photo/2022/04/30/19/12/cooking-banner-7166200_960_720.jpg">
     </div>
     <p><b>
-    <p class="jeden"><a href="recipes/casserole.html">Chicken and Dumplings Casserole</a></p>
-    <p class="dva"><a href="recipes/garlic.html">Garlic-Parmesan Shrimp</a></p>
-    <p class="tri"><a href="recipes/cheese.html">Simple Macaroni and Cheese</a></p>
+    <p><a href="recipes/casserole.html">Chicken and Dumplings Casserole</a></p>
+    <p><a href="recipes/garlic.html">Garlic-Parmesan Shrimp</a></p>
+    <p><a href="recipes/cheese.html">Simple Macaroni and Cheese</a></p>
     </b></p>
+
 
 </body>
 </html>
