--- a/recipes/casserole.html
+++ b/recipes/casserole.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Chicken and Dumplings Casserole</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https://images.media-allrecipes.com/userphotos/9395149.jpg&q=60&c=sc&orient=true&poi=auto&h=512">
+    
+    <h1 id="head">Chicken and Dumplings Casserole</h1>
+    <img class="obrazok" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https://images.media-allrecipes.com/userphotos/9395149.jpg&q=60&c=sc&orient=true&poi=auto&h=512">
     <h3>This chicken and dumplings casserole is comfort food at its best.</h3>
     <p></p>
     <ul>
@@ -65,10 +67,10 @@
         <p></p>
     </li>
     <h2>Cook's Note:</h2>
-    <p>Dish may be made ahead of time. At this point,
+    <p2>Dish may be made ahead of time. At this point,
        cool and store in the refrigerator or freezer.
        When ready to use, bake at 350 degrees until slightly bubbly.
-       Top with biscuits. Cover and bake as instructed.</p>
+       Top with biscuits. Cover and bake as instructed.</p2>
     <p></p>
 </ul>
 <a href="../index.html">Return to main page</a>
