--- a/recipes/cheese.html
+++ b/recipes/cheese.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Simple Macaroni and Cheese</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https://public-assets.meredithcorp.io/679c455ed74689800868fbbe020639f2/16450136607B0E9ECC-A28D-4F02-BAA9-F38C26122424.jpeg&q=60&c=sc&orient=true&poi=auto&h=512">
+    <h1 id="head">Simple Macaroni and Cheese</h1>
+    <img class="obrazok" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https://public-assets.meredithcorp.io/679c455ed74689800868fbbe020639f2/16450136607B0E9ECC-A28D-4F02-BAA9-F38C26122424.jpeg&q=60&c=sc&orient=true&poi=auto&h=512">
     <p></p>
     <ul>
         <li>Preparation time: 10 minutes</li>
@@ -45,9 +46,9 @@
         <p></p></li>
     </ul>
 <h2>Cook's Note:</h2>
-<p>You can never have enough cheese, and I usually add an extra 1/2 cup without ruining the recipe.</p>
- <p>Keep a careful eye on the milk when boiling, as milk boils fast and burns easily. 
-        Burnt milk will show up in the recipe's flavor if overcooked.</p>
+<p2>You can never have enough cheese, and I usually add an extra 1/2 cup without ruining the recipe.</p2>
+ <p2>Keep a careful eye on the milk when boiling, as milk boils fast and burns easily. 
+        Burnt milk will show up in the recipe's flavor if overcooked.</p2>
  <p></p>
 
  <a href="../index.html">Return to main page</a>
