--- a/recipes/garlic.html
+++ b/recipes/garlic.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Garlic-Parmesan Shrimp</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https://images.media-allrecipes.com/userphotos/7766512.jpg&q=60&c=sc&orient=true&poi=auto&h=512">
+    <h1 id="head">Garlic-Parmesan Shrimp</h1>
+    <img class="obrazok" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https://images.media-allrecipes.com/userphotos/7766512.jpg&q=60&c=sc&orient=true&poi=auto&h=512">
     <p></p>
     <ul>
         <li>Preparation time> 10 minutes</li>
@@ -54,7 +55,7 @@
 
 
     <h2>Cook's Note:</h2>
-    <p>You can use panko bread crumbs if you like.</p>
+    <p2>You can use panko bread crumbs if you like.</p2>
     <p></p>
     <a href="../index.html">Return to main page</a>
 
